2011-07-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/synctex.am (eptex_ch_synctex): Bug fix:
	use synctex-e-rec.ch[01] instead of ...
	* synctex-ep-rec.ch1 (removed): ... this file.
	Mail from Akira, Sat, 23 Jul 2011 23:02:45.


2011-07-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	SyncTeX infrastructure for pTeX and e-pTeX.
	* synctex-ptex.h, synctex-p-{mem,rec}.ch[01] (all new):
	Additional files for pTeX.
	* synctex-eptex.h, synctex-ep-{mem.ch[01],rec.ch1} (all new):
	Additional files for e-pTeX.
	* am/synctex.am: Adapt

	* synctex.c: Drop `#warning These structures MUST be kept...'.

2011-06-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex-{,e}tex.h: Drop the `#warning SyncTeX for *TeX'.
	* synctex-{,e,pdf,xe}tex.h: Move the default definition of
	SYNCTEX_GET_CURRENT_NAME for here ...
	* synctex.c: ... to here.

2011-06-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex_parser_utils.c: fix a typo.

2011-05-13  Taco Hoekwater  <taco@luatex.org>

	* synctex-luatex.h: synchronization_field_size has to be 1 for luatex.

2011-05-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex-etex.h, synctex-pdftex.h, synctex-tex.h, synctex-xetex.h:
	Move generic_synctex_get_current_name() prototype to ../texmfmp.h.

2011-05-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* synctex-etex.h, synctex-pdftex.h, synctex-tex.h, synctex-xetex.h:
	define SYNCTEX_GET_CURRENT_NAME() as in LuaTeX, since SyncTeX name
	should be full path when --output-directory option is given.

2011-05-09  Taco Hoekwater  <taco@luatex.org>

	* synctex-luatex.h: use an actual function to find the current name.

2011-04-16  Taco Hoekwater  <taco@luatex.org>

	* synctex.c: Rename flags member output => output_p to avoid
	conflict with macro defined for MinGW32.

2011-04-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* synctex-luatex.h (new): moved from ../luatexdir/utils to here.

	* synctex.c (synctexstartinput): When SYNCTEX_GET_CURRENT_NAME()